<resources>

    <string name="app_name">Sudoku</string>
    <string name="view_title_img_btn_left_des">left_des</string>
    <string name="view_title_img_btn_right_des">right_des</string>
    <string name="view_title_tv_center_text">标题</string>
    <string name="view_title_tv_left_text">返回</string>
    <string name="view_title_tv_right_text">首页</string>
    <string name="sudoku_please_select_a_cell_first">请先选择一个单元格，再填写数字</string>
    <string name="sudoku_take_time">用时：</string>
    <string name="sudoku_pause">暂停</string>
    <string name="sudoku_continue">继续</string>
    <string name="sudoku_stop">停止</string>

</resources>