<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="4dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="@drawable/sudoku_tv_take_time"
        android:gravity="end|center_vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="6dp"
        android:text="@string/sudoku_take_time"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/sudoku_tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/sudoku_tv_take_time"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="6dp"
        android:text="00:00"
        android:textSize="24sp" />

    <Button
        android:id="@+id/sudoku_btn_time_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/sudoku_btn_control_time"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp"
        android:text="@string/sudoku_pause"
        android:textSize="24sp" />

    <Button
        android:id="@+id/sudoku_btn_time_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/sudoku_btn_control_time"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp"
        android:text="@string/sudoku_stop"
        android:textSize="24sp" />

</LinearLayout>